fixing escape / causing compile issues

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Lucky or Genius grades predictions and assigns scores for public figures and publications."
-      content="Web site created using create-react-app"
+      content="Lucky or Genius grades predictions and assigns scores for public figures and publications."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/small_logo.ico" />
     <!--
