--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Lucky or Genius</title>
+    <meta name="title" content="Lucky or Genius" />
+    <meta name="description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.luckyorgenius.com/" />
+    <meta property="og:title" content="Lucky or Genius" />
+    <meta property="og:description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.luckyorgenius.com/" />
+    <meta property="twitter:title" content="Lucky or Genius" />
+    <meta property="twitter:description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
