updating meta data image

--- a/public/index.html
+++ b/public/index.html
@@ -57,13 +57,13 @@
     <meta property="og:url" content="https://www.luckyorgenius.com/" />
     <meta property="og:title" content="Lucky or Genius" />
     <meta property="og:description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="https://i.ibb.co/HrY2M7x/metalogo.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.luckyorgenius.com/" />
     <meta property="twitter:title" content="Lucky or Genius" />
     <meta property="twitter:description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="https://i.ibb.co/HrY2M7x/metalogo.png" />
     
   </head>
   <body>
