--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,10 @@
       src="https://plausible.io/js/script.js"
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Poppins:wght@100;200;300;400;500;600;700&family=Raleway:wght@600&family=Rubik:wght@100;400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Your+Selected+Font"
     />
     <meta
       name="google-signin-client_id"
@@ -51,20 +43,31 @@
     -->
     <title>Lucky or Genius</title>
     <meta name="title" content="Lucky or Genius" />
-    <meta name="description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
+    <meta
+      name="description"
+      content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
+    />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.luckyorgenius.com/" />
     <meta property="og:title" content="Lucky or Genius" />
-    <meta property="og:description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
+    <meta
+      property="og:description"
+      content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
+    />
     <meta property="og:image" content="https://i.ibb.co/HrY2M7x/metalogo.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.luckyorgenius.com/" />
     <meta property="twitter:title" content="Lucky or Genius" />
-    <meta property="twitter:description" content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium." />
-    <meta property="twitter:image" content="https://i.ibb.co/HrY2M7x/metalogo.png" />
-    
+    <meta
+      property="twitter:description"
+      content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
+    />
+    <meta
+      property="twitter:image"
+      content="https://i.ibb.co/HrY2M7x/metalogo.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
