Update meta tag for og:image

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       property="og:description"
       content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
     />
-    <meta property="og:image" content="https://ibb.co/RhYTjRq" />
+    <meta property="og:image" content="https://i.ibb.co/vsV4X0S/log.jpg" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.luckyorgenius.com/" />
