updating meta tags title

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.luckyorgenius.com/" />
-    <meta property="og:title" content="Lucky or Genius" />
+    <meta property="og:title" content="Lucky or Genius - Do you trust your favourite influencer?" />
     <meta
       property="og:description"
       content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
