--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,10 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.luckyorgenius.com/" />
-    <meta property="og:title" content="Lucky or Genius - Do you trust your favourite influencer?" />
+    <meta
+      property="og:title"
+      content="Lucky or Genius - Do you trust your favourite influencer?"
+    />
     <meta
       property="og:description"
       content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
@@ -64,10 +67,7 @@
       property="twitter:description"
       content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
     />
-    <meta
-      property="twitter:image"
-      content="https://i.ibb.co/HrY2M7x/metalogo.png"
-    />
+    <meta property="twitter:image" content="https://i.ibb.co/vsV4X0S/log.jpg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
