added privacy policy, term&condition, chart bug fix & small tabs ui changes

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Lucky or Genius</title>
-    <meta name="title" content="Lucky or Genius" />
+    <meta
+      name="title"
+      content="Lucky or Genius - Do you trust your favourite influencer?"
+    />
     <meta
       name="description"
       content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
@@ -60,9 +63,12 @@
     />
     <meta property="og:image" content="https://i.ibb.co/vsV4X0S/log.jpg" />
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="https://i.ibb.co/vsV4X0S/log.jpg" />
     <meta property="twitter:url" content="https://www.luckyorgenius.com/" />
-    <meta property="twitter:title" content="Lucky or Genius" />
+    <meta
+      property="twitter:title"
+      content="Lucky or Genius - Do you trust your favourite influencer?"
+    />
     <meta
       property="twitter:description"
       content="Ai based accountability for predictions made by influencers and public figures. Prediction extraction and validation across any digital medium."
